# The-Ultimate-Discord-Bot-Project

./: Feedback.md  VIDEO.txt  chatgptAPI.py  main.py  mongodb.py  pyproject.toml  replit.nix  seleniumMine.py  webscrapper.py
.lesson/: instructions.md
templates/: index.html
user/: models.py
